partial fixes to word wrap issue, chrome still isn't playing nicely

--- a/css/base.css
+++ b/css/base.css
@@ -4,11 +4,12 @@ a:hover									{ text-decoration:underline; }
 div.centered							{ text-align:center; }
 div.italic								{ font-style:italic; }
 div.bold								{ font-weight:bold; }
+p										{ overflow-wrap: break-word; word-wrap: break-word; word-break: normal; -webkit-hyphens: auto; -ms-hyphens: auto; -moz-hyphens: auto; hyphens: auto; }
 ul ul,
 ul ol,
 ol ol,
 ol ul 									{ margin: 0; }
-code									{ margin-bottom: 10px; } 
+li code									{ margin-bottom: 10px; }
 
 .wrap									{ width:90%; max-width:620px; margin:0 auto; position:relative; }
 
